--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
-    "server": "cd server node server.js --ignore client",
+    "server": "cd server && node server.js --ignore client",
     "build": "cd client && npm run build",
     "start": "npm run build && npm run server",
     "install": "cd server && npm i && cd ../client && npm i",
